# python_excercises

./: README.md  repositories.txt
First Course/: calculator.py  word_set.py
SOLID/: hello.py  pyproject.toml  requirements.txt
SOLID/src/solid_principles/: initial_code.py
SOLID/src/solid_principles/interfaces_segregations/: after.py
SOLID/src/solid_principles/liskov_substitution/: after.py
SOLID/src/solid_principles/open_close/: after.py
SOLID/src/solid_principles/single_reponsability/: after.py
functional_programming/chapter01/: ch01_ex1.py  ch01_ex2.py
functional_programming/chapter02/: ch02_ex1.py
